php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39718 apache 1.x crash on startup if assert.callback is set in ini
Submitted: 2006-12-03 03:21 UTC Modified: 2006-12-03 17:13 UTC
From: xuefer at 21cn dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5CVS-2006-12-03 (CVS) OS: gentoo linux 2.6
Private report: No CVE-ID: None
 [2006-12-03 03:21 UTC] xuefer at 21cn dot com
Description:
------------
reproducable with "assert.callback = 0", or "assert.callback = abc"
not reproducable with "assert.callback = "


Reproduce code:
---------------
php.ini:
assert.callback = abc
or
assert.callback = 0

$ gdb --args /usr/sbin/apache -X -DPHP5

Actual result:
--------------
#0  0xb7a438c4 in _zval_ptr_dtor (zval_ptr=0xb7b59118) at /home/xuefer/src/php5/Zend/zend_execute_API.c:412
#1  0xb79eab36 in zm_shutdown_assert (type=1, module_number=1) at /home/xuefer/src/php5/ext/standard/assert.c:98
#2  0xb799a4d9 in zm_shutdown_basic (type=1, module_number=1) at /home/xuefer/src/php5/ext/standard/basic_functions.c:4084
#3  0xb7a56644 in module_destructor (module=0x80d1338) at /home/xuefer/src/php5/Zend/zend_API.c:1893
#4  0xb7a5ab5c in zend_hash_apply_deleter (ht=0xb7b5aa00, p=0x80d1308) at /home/xuefer/src/php5/Zend/zend_hash.c:606
#5  0xb7a5ac40 in zend_hash_graceful_reverse_destroy (ht=0xb7b5aa00) at /home/xuefer/src/php5/Zend/zend_hash.c:641
#6  0xb7a5041a in zend_shutdown () at /home/xuefer/src/php5/Zend/zend.c:715
#7  0xb7a0aa01 in php_module_shutdown () at /home/xuefer/src/php5/main/main.c:1672
#8  0xb7a0a9cb in php_module_shutdown_wrapper (sapi_globals=0xb7b570c0) at /home/xuefer/src/php5/main/main.c:1643
#9  0xb7ab9aa4 in apache_php_module_shutdown_wrapper () at /home/xuefer/src/php5/sapi/apache/mod_php5.c:905
#10 0x08052bf2 in ap_clear_pool ()

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-03 11:04 UTC] tony2001@php.net
Cannot reproduce.
 [2006-12-03 12:30 UTC] tony2001@php.net
Nevermind, I see it.
 [2006-12-03 17:13 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 06:00:02 2026 UTC