Fixed bug #39718 (possible crash if assert.callback is set in ini).